# AthleticsPose

./: .gitignore  LICENSE-DATASET  Makefile  README.md  index.html  pyproject.toml
athleticspose/: inference.py  inferencer.py  loss.py  prediction.py  utils.py  visualize.py
athleticspose/camera/: camera.py
athleticspose/datasets/: ap_dataset.py  dynamic_dataset.py
athleticspose/mmpose/config/: td-hm_ViTPose-base_8xb64-210e_coco-256x192.py
athleticspose/models/MotionAGFormer/: model.py
athleticspose/models/MotionAGFormer/modules/: attention.py  graph.py  mlp.py  tcn.py
athleticspose/multiview/: calib.py  triangulate.py
athleticspose/pipeline/: video_estimator.py
athleticspose/plmodules/: data_module.py  linghtning_module.py
athleticspose/preprocess/: pose_format.py  processing.py  utils.py
athleticspose/statics/: bones.py  colors.py  joints.py
configs/: default.yaml
configs/data/: all.yaml  discus_shotput.yaml  hurdle.yaml  racewalk.yaml  running.yaml  sd_sprint.yaml
configs/evaluation/: ap3d_pretrained.yaml  default.yaml  h36m_pretrained.yaml
configs/model/: base.yaml  small.yaml
configs/prediction/: from_2d_markers.yaml
demo/: app.py  app_colab.py  colab_demo.ipynb  pipeline.py  visualization.py
scripts/: analyze_predictions.py  evaluate.py  evaluate_by_action.py  evaluate_multiview.py  evaluate_single_pose.py  infer_from_video.py  predict.py  predict_multiview.py  preprocess_athleticspose.py  preprocess_hjpose.py  train.py
tests/: test_camera.py  test_inference.py  test_pose_format.py  test_video_estimator.py
tests/sample_data/: sample_camera_params.json
