[project]
name = "athleticspose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "matplotlib>=3.10.0",
    "natsort>=8.4.0",
    "opencv-python>=4.11.0.86",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "numpy<2",
]

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
exp = [
    "jupyter>=1.1.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["athleticspose"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"}

[tool.ruff]
unfixable = ["F401"]
